@@ -573,9 +573,9 @@ ACE_SSL_Context::report_error (unsigned long error_code)
 void
 ACE_SSL_Context::report_error (void)
 {
-  unsigned long error = ::ERR_get_error ();
-  ACE_SSL_Context::report_error (error);
-  ACE_OS::last_error (error);
+  unsigned long err = ::ERR_get_error ();
+  ACE_SSL_Context::report_error (err);
+  ACE_OS::last_error (err);
 }
 
 int
