@@ -1,3 +1,11 @@
+Wed Apr 18 09:30:00 UTC 2007 Simon Massey  <sma@prismtech.com>
+
+        * ace/SSL/SSL_Asynch_Stream.cpp:
+        * ace/SSL/SSL_Context..cpp:
+
+          Change variable name and comments so that compiler warnings
+          don't trigger error indication on the scoreboard.
+
 Wed Apr 18 09:29:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/QtReactor/QtReactor.{h,cpp}:
